# D2C-RPi-OBDLogger

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gpsd_fix.patch
cmakemodules/: FindPROTONC.cmake
src/azurelogger/: CMakeLists.txt  azurelogger.geany  main.c  main.h  sb_comm.c
src/logger/: .gpscomm.c.swp  gpscomm.c
